compiler/actonc/test/syntaxerrors/err31.act
# Invalid operator combination
def bad_op():
    return 5 ** ** 2